force-app/main/default/objects/ProgramEngagement__c/ProgramEngagement__c.object-meta.xml
<CustomObject>
    <label>Program Engagement</label>
    <nameField>
        <label>Program Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>