force-app/main/default/objects/ProgramEngagement__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>