force-app/main/default/objects/ProgramEngagement__c/fields/AttendanceSummary__c.field-meta.xml
<CustomField>
    <fullName>AttendanceSummary__c</fullName>
    <formula>IF(NOT(ISBLANK(AttendanceRate__c)),
    TEXT(AttendanceRate__c) &amp; &quot; (&quot; &amp; 
    TEXT(NumPresentServiceDeliveries__c) &amp; 
    &quot;/&quot; &amp; 
    TEXT(NumPresentServiceDeliveries__c + NumAbsentServiceDeliveries__c) &amp;
    &quot;)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendance Summary</label>
    <type>Text</type>
</CustomField>