force-app/main/default/objects/ProgramEngagement__c/fields/AutoName_Override__c.field-meta.xml
<CustomField>
    <fullName>AutoName_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, the Program Engagement Name can be edited after it has been created by the the Process Builder process titled Template: Program Engagement Name.</description>
    <inlineHelpText>When this is checked, the Program Engagement Name can be edited after it has been created by the the Process Builder process titled Template: Program Engagement Name.</inlineHelpText>
    <label>Auto-Name Override</label>
    <type>Checkbox</type>
</CustomField>