force-app/main/default/objects/ProgramEngagement__c/fields/CurrentUserOwner__c.field-meta.xml
<CustomField>
    <fullName>CurrentUserOwner__c</fullName>
    <formula>Owner:User.Id = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Owner</label>
    <type>Checkbox</type>
</CustomField>