force-app/main/default/objects/ProgramEngagement__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date a Contact completes or leaves the Program. If the Program Engagement stage Completed or Withdrawn, the End Date is set to TODAY() by the Process Builder process titled Template: Program Engagement Name. Clone the process template to edit it.</description>
    <inlineHelpText>The date a Contact completes or leaves the Program. If the Program Engagement stage Completed or Withdrawn, the End Date is set to TODAY() by the Process Builder process titled Template: Program Engagement Name. Clone the process template to edit it.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>