force-app/main/default/objects/ProgramEngagement__c/fields/NumPresentServiceDeliveries__c.field-meta.xml
<CustomField>
    <fullName>NumPresentServiceDeliveries__c</fullName>
    <label>Number of Present Service Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>