force-app/main/default/objects/ProgramEngagement__c/fields/ProgramCohort__c.field-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<CustomField>
    <fullName>ProgramCohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Cohort</label>
    <referenceTo>ProgramCohort__c</referenceTo>
    <relationshipLabel>Program Engagements</relationshipLabel>
    <relationshipName>ProgramEngagements</relationshipName>
    <type>Lookup</type>
</CustomField>