force-app/main/default/objects/ProgramEngagement__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>A Contact&#39;s relationship with the Program Engagement. Values are determined by your Admin.</description>
    <inlineHelpText>A Contact&#39;s relationship with the Program Engagement. Values are determined by your Admin.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>