force-app/main/default/objects/ProgramEngagement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>A Contact&#39;s stage in a Program Engagement. Picklist values are determined by your Admin. Don&#39;t delete or modify the API Name of the Active And Enrolled picklist values as they are referenced in PMM reports.</description>
    <inlineHelpText>These Picklist values describe a Contact&#39;s stage of engagement in a Program and are displayed in a Path. Values are determined by your Admin.</inlineHelpText>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Application Denied</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>