force-app/main/default/objects/ProgramEngagement__c/fields/StartDate__c.field-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<CustomField>
    <fullName>StartDate__c</fullName>
    <description>If the Program Engagement stage is set to Enrolled or Active, the Start Date is set to TODAY() by the Process Builder process, Template: Program Engagement. Clone the template to edit it.</description>
    <inlineHelpText>If the Program Engagement Stage is Enrolled or Active, the Start Date defaults to today if left blank.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>