force-app/main/default/objects/ProgramEngagement__c/validationRules/APPLICATION_DATE_BEFORE_END_DATE.validationRule-meta.xml
<ValidationRule>
    <fullName>APPLICATION_DATE_BEFORE_END_DATE</fullName>
    <active>true</active>
    <description>Ensures Application Date is after the End Date</description>
    <errorConditionFormula>ApplicationDate__c &gt;  EndDate__c</errorConditionFormula>
    <errorMessage>End Date must be after the Application Date</errorMessage>
</ValidationRule>