force-app/main/default/objects/ProgramEngagement__c/validationRules/APPLICATION_DATE_BEFORE_START_DATE.validationRule-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<ValidationRule>
    <fullName>APPLICATION_DATE_BEFORE_START_DATE</fullName>
    <active>true</active>
    <description>Ensures application date is after the start date</description>
    <errorConditionFormula>ApplicationDate__c &gt; StartDate__c</errorConditionFormula>
    <errorMessage>Start Date must be after the Application Date</errorMessage>
</ValidationRule>