force-app/main/default/objects/ProgramEngagement__c/validationRules/END_DATE_WITHIN_PROGRAM_DATES.validationRule-meta.xml
<ValidationRule>
    <fullName>END_DATE_WITHIN_PROGRAM_DATES</fullName>
    <active>true</active>
    <description>The Program Engagement End Date must fall within the Program Start and End Dates when specified.</description>
    <errorConditionFormula>OR( 
 AND(
  NOT(ISBLANK(EndDate__c)),
  NOT(ISBLANK(Program__r.StartDate__c)),
  EndDate__c &lt; Program__r.StartDate__c
 ),
 AND(
  NOT(ISBLANK(EndDate__c)),
  NOT(ISBLANK(Program__r.EndDate__c)),
  EndDate__c &gt; Program__r.EndDate__c
 )
)</errorConditionFormula>
    <errorMessage>End date cannot be later than program end date/earlier than program start date</errorMessage>
</ValidationRule>