force-app/main/default/objects/ProgramEngagement__c/validationRules/PROGRAM_MATCHES_COHORT_PROGRAM.validationRule-meta.xml
<ValidationRule>
    <fullName>PROGRAM_MATCHES_COHORT_PROGRAM</fullName>
    <active>true</active>
    <description>The Program must match the Program Cohort&#39;s Program when Program Cohort is populated.</description>
    <errorConditionFormula>AND(
!ISBLANK(Program__c),
!ISBLANK(ProgramCohort__c),
ProgramCohort__r.Program__c != Program__c
)</errorConditionFormula>
    <errorMessage>The Program does not match the related Program Cohort&#39;s Program.</errorMessage>
</ValidationRule>