force-app/main/default/objects/ProgramEngagement__c/validationRules/START_DATE_WITHIN_PROGRAM_DATES.validationRule-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<ValidationRule>
    <fullName>START_DATE_WITHIN_PROGRAM_DATES</fullName>
    <active>true</active>
    <description>The Program Engagement Start Date must fall within the Program Start and End Dates when specified.</description>
    <errorConditionFormula>OR( 
 AND(
  NOT(ISBLANK(StartDate__c)),
  NOT(ISBLANK(Program__r.StartDate__c)),
  StartDate__c &lt; Program__r.StartDate__c
 ),
 AND(
  NOT(ISBLANK(StartDate__c)),
  NOT(ISBLANK(Program__r.EndDate__c)),
  StartDate__c &gt; Program__r.EndDate__c
 )
)</errorConditionFormula>
    <errorMessage>Select a start date that&#39;s on or after the program start date and on or before the program end date.</errorMessage>
</ValidationRule>