force-app/main/default/objects/ProgramEngagement__c/listViews/MyProgramEngagementsOwner.listView-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<ListView>
    <fullName>MyProgramEngagementsOwner</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Stage__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Program Engagements</label>
</ListView>