force-app/main/default/objects/ProgramEngagement__c/listViews/WaitlistedProgramEngagements.listView-meta.xml
<ListView>
    <fullName>WaitlistedProgramEngagements</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Program__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </filters>
    <label>Waitlisted Program Engagements</label>
</ListView>